--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/google/trace-viewer/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/google/trace-viewer/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/google/trace-viewer" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/catapult-project/catapult/archive/master.zip" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/catapult-project/catapult/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/catapult-project/catapult" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
